--- a/index.html
+++ b/index.html
@@ -3,15 +3,42 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Simple Website</title>
+  <title>My Enhanced Website</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to My Simple Website</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <h1>Welcome to My Enhanced Website</h1>
+    <p>A modern, responsive site built for sharing with friends.</p>
   </header>
-  <section>
-    <p>Hello, friends! This is a basic website hosted on GitHub Pages.</p>
-  </section>
+
+  <main>
+    <section>
+      <h2>About Us</h2>
+      <p>We create simple and effective websites for everyone to enjoy.</p>
+    </section>
+    <section>
+      <h2>Our Services</h2>
+      <ul>
+        <li>Web Design</li>
+        <li>Web Development</li>
+        <li>Hosting Setup</li>
+        <li>Maintenance</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Contact us: <a href="mailto:email@example.com">email@example.com</a></p>
+    <p>&copy; 2024 My Enhanced Website</p>
+  </footer>
 </body>
 </html>
